fixed alignment issues on the welcome and about containers and added a home button to the navbar

--- a/Personal Website/project.css
+++ b/Personal Website/project.css
@@ -5,9 +5,9 @@
 
 .carousel {
     background: #409682;
-
     border-radius: 30px;
     overflow: hidden;
+    border: 2px solid #2F6F60;
 }
 
 .item {
@@ -22,4 +22,16 @@ body {
     background: -o-linear-gradient(left, #E684AE, #79CBCA, #77A1D3);
     background: linear-gradient(to right, #55C9AE, #90F9E1, #55C9AE);  /* Chrome 10-25, Safari 5.1-6 */
     font-family: 'Segoe UI Black';
+}
+
+h1 {
+    font-size: 40px;
+}
+
+h4 {
+    font-size: 26px;
+}
+
+p {
+    font-family: 'Segoe UI';
 }
