--- a/Personal Website/styles.css
+++ b/Personal Website/styles.css
@@ -117,9 +117,10 @@
     text-align: center;
 }
 
-.info-block:not(:first-child) {
+/* for gaps between info blocks */
+/* .info-block:not(:first-child) {
      margin-top: 20px; 
-}
+} */
 
 .info-block h1, h2{
     background: none;
